# quick-start-connectors

.devcontainer/: devcontainer.json
confluence/: README.md  pyproject.toml
confluence/provider/: __init__.py  app.py  client.py  provider.py
gdrive/: README.md  pyproject.toml
gdrive/provider/: __init__.py  app.py  cache.py  provider.py
msgraph/: README.md  api.yaml  pyproject.toml
msgraph/provider/: __init__.py  app.py  async_download.py  client.py  exceptions.py  provider-old.py  provider.py  unstructured.py
